# warn-transformer

./: .gitignore  .pre-commit-config.yaml  .pypirc  Makefile  POST.md  Pipfile  README.md  cache.py  merge_warn_ppp.ipynb  nj.py  pip.conf  pyproject.toml  setup.cfg  setup.py  standardize_company_names.py  standardize_dates.py  standardize_field_names.py  utils.py
.github/workflows/: continuous-deployment.yml
_notebooks/: duplicates.ipynb  nulls.ipynb
docs/: Makefile  conf.py  contributing.md  index.md  reference.rst  releasing.md  requirements.txt
src/: consolidate.py  download.py  schema.py  utils.py
src/transformers/: ak.py  ia.py
tests/: conftest.py  test_consolidate.py  test_download.py  test_integrate.py
tests/data/raw/: .~lock.tx.csv#  .~lock.va.csv#  .~lock.wa.csv#  .~lock.wi.csv#  ak.csv  al.csv  az.csv  ca.csv  co.csv  ct.csv  dc.csv  de.csv  fl.csv  ga.csv  hi.csv  ia.csv  id.csv  il.csv  in.csv  ks.csv  ky.csv  la.csv  md.csv  me.csv  mi.csv  mo.csv  ms.csv  mt.csv  nd.csv  ne.csv  nj.csv  nm.csv  ny.csv  oh.csv  ok.csv  or.csv  pa.csv  ri.csv  sc.csv  sd.csv  (+7 more)
warn_analysis/: consolidate.py  download.py  schema.py  utils.py
warn_analysis/transformers/: al.py  az.py  ca.py  co.py  dc.py  de.py  ga.py  ia.py
warn_transformer/: cli.py  consolidate.py  download.py  integrate.py  schema.py  utils.py  validate.py
warn_transformer/transformers/: ak.py  al.py  az.py  ca.py  co.py  ct.py  dc.py  de.py  fl.py  ga.py  hi.py  ia.py  id.py  il.py  in.py  ks.py  ky.py  la.py  md.py  me.py  mi.py  mo.py  ms.py  mt.py  nd.py  ne.py  nj.py  nm.py  ny.py  oh.py  ok.py  or.py  pa.py  ri.py  sc.py  sd.py  tn.py  tx.py  ut.py  va.py  (+3 more)
