[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "warn-transformer"
description = "Consolidate, enrich and analyze the data gathered by warn-scraper"
authors = [
    {name = "Big Local News", email = "biglocalnews@stanford.edu"}
]
readme = "README.md"
requires-python = ">= 3.10"
keywords = ["WARN Act", "scrapers", "WARN Act data", "WARN Act scrapers"]
license = "Apache-2.0"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "bln",
    "click",
    "jellyfish",
    "marshmallow",
]

dynamic = ["version"]

[project.urls]
"Documentation" = "https://warn-transformer.readthedocs.io"
"Maintainer" = "https://github.com/biglocalnews"
"Source" = "https://github.com/biglocalnews/warn-transformer"
"Tracker" = "https://github.com/biglocalnews/warn-transformer/issues"


[project.scripts]
warn-transformer = "warn_transformer.cli:main"

# [project.authors]


[tool.setuptools_scm]


# [project.optional-dependencies]
# pdf = ["ReportLab>=1.2", "RXP"]
# rest = ["docutils>=0.3", "pack ==1.1, ==1.3"]

# [project.scripts]
# my-script = "my_package.module:function"

# ... other project metadata fields as listed in:
#     https://packaging.python.org/en/latest/guides/writing-pyproject-toml/
